# rag_law

./: .env.example  .gitignore  .gitlab-ci.yml  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
doc/chunk/: Chunking 切分效果人工测试v01.md  句边界块链与二次对齐方案.md  句边界对齐切分.md  宪法_当前切分完整性统计.md  宪法_方案C_c03_breakpoint_基准.md  宪法_语义合并前后对比报告.md  宪法_边界切分_CHUNK1500_O100_floor100.md  宪法_边界切分_CHUNK1500_O100_floor60.md  宪法_边界切分_重叠下界对比.md  宪法_边界切分完整性统计.md
doc/cicd/: README.md
doc/plan/: rag-law-mvp-plan-v1.0.0.md  v1.0.0-rag-law-mvp-plan.md  v1.0.1-chunking-plan.md  v1.0.2-bge-m3-embedding-plan.md  v1.0.3-es-store-plan.md  v1.0.4-ingest-plan.md  v1.0.5-qa-plan.md  v1.0.6-mvp-acceptance-plan.md  v1.0.7-qa-webui-plan.md  v1.0.8-qa-webui-performance-plan.md  v1.1.0-logging-plan.md  v1.1.1-monitoring-plan.md  v1.1.10-md-heading-presolve-scheme-d.md  v1.1.11-rag-evaluation-plan.md  v1.1.12-d05-llm-gold-annotation-plan.md  v1.1.13-retrieval-recall-mrr-runbook.md  v1.1.2-locust-load-test-plan.md  v1.1.3-token-cost-observability-plan.md  v1.1.4-webui-model-selection-plan.md  v1.1.5-qa-rate-limit-plan.md  v1.1.6-semantic-chunking-plan.md  v1.1.7-scheme-d-eval.md  v1.1.7-semantic-chunking-bcd-plan.md  v1.1.8-scheme-d-eval.md  v1.1.9-scheme-d-concrete.md
doc/price_api/: deepseek.md  qwen.md
doc/storage/: README.md  aliyun_oss.md  docker-compose.elasticsearch.yml  docker-compose.minio.example.yml
doc/text2vector/: BGE-M3 向量层实现计划.md
doc/update/: add_doc.md
filebeat/: filebeat.yml  old_filebeat.yml
notebooks/: c03_embedding_smoke.ipynb  c04_es.ipynb  c05_ingest_es_runbook.ipynb  c06_oss_ingest.ipynb  c07.ipynb  c07_show_es_chunk.ipynb  c08_del_es_chunk.ipynb  c09_breakpoint_chunk.ipynb  c10_md_heading_segment_chunk.ipynb  c11_generate_eval_data.ipynb  c12_eval.ipynb  ingest_plan_runbook.md
scripts/: analyze_boundary_chunk_integrity.py  bge_m3_cpu_vs_mps_bench.py  bge_m3_device_check.py  c03_breakpoint_export.py  d04_document_segmentation_export.py  d05_heading_presplit_document_segmentation_export.py  e01_d05_llm_gold_generate.py  e02_d05_llm_gold_generate_async.py  e03_eval_retrieval_recall_mrr.py  es_dump_chunks_to_tmp.py  es_smoke_test.py  export_md2_full_to_md3.py  ingest_oss_md_to_es.py  llm_smoke_test.py  rag_ingest.py  rag_qa.py  start_qa_webui.sh
settings/default/: random_query.txt
settings/qwen_model/: qwen_free_model_name.json  qwen_free_model_name_ranked.json  qwen_full_modal.json  qwen_vector.json  qwen_video.json  qwen_voice.json
src/: metrics_retrieval.py
src/chunking/: __init__.py  boundary.py  breakpoint_embed.py  document_segmentation.py  env_overlap.py  md_heading_presplit.py  split.py
src/conf/: __init__.py  logging_setup.py  monitor.py  settings.py  token_cost.py
src/embeddings/: __init__.py  base.py  bge_m3.py  types.py
src/es_store/: __init__.py  chunk_defaults.py  client.py  mapping.py  scope_replace.py  store.py  version_cleanup.py
src/ingest/: __init__.py  documents.py  dump_format.py  loaders.py  oss_layout.py
src/qa/: __init__.py  hit_resolve.py  messages.py  pipeline.py  streaming.py
tests/: conftest.py  test_metrics_retrieval.py
tests/test_chunking/: fixture_constitution_excerpt.txt  test_boundary.py  test_breakpoint_embed.py  test_constitution_md_golden.py  test_document_segmentation.py  test_md_heading_presplit.py  test_preview_logic.py  test_split.py  test_webui_document_segmentation.py  test_webui_preview.py
tests/test_conf/: test_logging_setup.py  test_monitor.py  test_settings.py  test_token_cost.py
tests/test_embeddings/: test_bge_m3.py  test_types_and_helpers.py
tests/test_es_store/: test_client.py  test_scope_replace.py  test_store.py  test_version_cleanup.py
tests/test_ingest/: test_documents.py  test_dump_format.py  test_loaders.py  test_oss_layout.py
tests/test_qa/: test_hit_resolve.py  test_messages.py  test_pipeline.py  test_streaming.py  (+1 more)
(+26 files in other folders)
