[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-law"
version = "0.1.0"
description = "法律类 RAG（MVP）"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "python-dotenv>=1,<2",
]

[tool.setuptools.packages.find]
where = ["src"]
