[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-law"
version = "0.1.0"
description = "法律类 RAG（MVP）"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "python-dotenv>=1,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
]
web = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "httpx>=0.27,<1",
    "python-multipart>=0.0.9,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# 覆盖率依赖 pytest-cov（见 dev 可选依赖）。默认不加 --cov，避免仅安装 pytest 时报错。
# 带覆盖率与 90% 门槛：`pytest --cov=conf --cov-report=term-missing --cov-report=xml --cov-fail-under=90`

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
precision = 1
include = ["*/conf/*"]
