[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-law"
version = "0.1.0"
description = "法律类 RAG（MVP）"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "python-dotenv>=1,<2",
]

# pip：`pip install -e ".[dev]"` 读此处；与下方 [dependency-groups].dev 保持版本一致。
[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
    "numpy>=1.24,<3",
    "elasticsearch>=8.12,<9",
]
# 仅 ES 客户端（与 dev 中 elasticsearch 一致；可单独 pip install -e ".[es]"）
es = [
    "elasticsearch>=8.12,<9",
]
# transformers 5.x 移除 is_torch_fx_available，与 FlagEmbedding 1.3.x 导入链不兼容（FlagOpen/FlagEmbedding#1561）
embedding = [
    "FlagEmbedding>=1.2,<2",
    "numpy>=1.24,<3",
    "torch>=2,<3",
    "transformers>=4.41,<5",
    "sentence-transformers>=3.0.1,<4",
]
web = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "httpx>=0.27,<1",
    "python-multipart>=0.0.9,<1",
]
# OpenAI 兼容 Chat Completions（DashScope 等）；连通性见 `scripts/llm_smoke_test.py`
llm = [
    "openai>=1,<2",
]
oss = [
    "alibabacloud-oss-v2>=1.2.0",
]

# uv：裸 `uv sync` 默认同步这些组（与 CI 的 pip install -e ".[dev,web]" 一致）。
# web：chunking WebUI 测试需要 fastapi；与 optional-dependencies.web 保持版本一致。
[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
    "numpy>=1.24,<3",
    "elasticsearch>=8.12,<9",
]
es = [
    "elasticsearch>=8.12,<9",
]
web = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "httpx>=0.27,<1",
    "python-multipart>=0.0.9,<1",
]
llm = [
    "openai>=1,<2",
]
oss = [
    "alibabacloud-oss-v2>=1.2.0",
]

[tool.uv]
default-groups = ["dev", "web"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: 需本地模型或重依赖，默认不强制在 CI 跑",
]
# 覆盖率依赖 pytest-cov（见 dev 可选依赖）。默认不加 --cov，避免仅安装 pytest 时报错。
# 带覆盖率与 90% 门槛：`pytest --cov=conf --cov-report=term-missing --cov-report=xml --cov-fail-under=90`

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "^\\s*\\.\\.\\.\\s*$",
]
precision = 1
include = ["*/conf/*", "*/embeddings/*", "*/es_store/*", "*/ingest/*", "*/qa/*"]
